--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "swapi-js-examples",
     "version": "1.0.0",
-    "description": "test task for swapi",
+    "description": "test task for swapi.dev",
     "author": "Pavlo Sprogis <pavel.sprogis@gmail.com>",
     "license": "ISC",
     "scripts": {
